Bug Fixed: Layout Issues

--- a/style.css
+++ b/style.css
@@ -62,4 +62,5 @@ tc-input:focus{
 
 .show-if-valid {
     color: white;
+    height: 2.1rem;
 }
